--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -182,4 +182,17 @@
         app:layout_constraintVertical_bias="0.539"
         app:srcCompat="@android:drawable/ic_menu_share" />
 
+    <TextView
+        android:id="@+id/cyphersTV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Виды шифров:"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/spinner"
+        app:layout_constraintHorizontal_bias="0.918"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.025" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
