Улучшил дизайн, сделал кнопки полупрозрачные и серые.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,6 @@
         android:id="@+id/pasteKey"
         android:layout_width="45dp"
         android:layout_height="45dp"
-        android:background="?attr/actionModePasteDrawable"
         android:backgroundTint="@color/material_on_background_disabled"
         android:hapticFeedbackEnabled="false"
         android:onClick="onClickPasteKey"
@@ -28,7 +27,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:backgroundTint="@color/material_on_background_disabled"
+        style="?android:attr/borderlessButtonStyle"
+        android:backgroundTint="?attr/colorControlHighlight"
         android:ellipsize="none"
         android:text="@string/encrypt"
         android:textColor="@color/white"
@@ -45,7 +45,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
-        android:backgroundTint="@color/material_on_background_disabled"
+        style="?android:attr/borderlessButtonStyle"
+
+        android:backgroundTint="?attr/colorControlHighlight"
         android:ellipsize="none"
         android:text="@string/decrypt"
         android:textColor="@color/white"
@@ -120,7 +122,6 @@
         android:id="@+id/CopyAnswer"
         android:layout_width="45dp"
         android:layout_height="45dp"
-        android:background="?attr/actionModeCopyDrawable"
         android:backgroundTint="@color/material_on_background_disabled"
         android:backgroundTintMode="multiply"
         android:onClick="onClickCopyAnswer"
@@ -136,7 +137,6 @@
         android:id="@+id/copyText"
         android:layout_width="45dp"
         android:layout_height="45dp"
-        android:background="?attr/actionModeCopyDrawable"
         android:backgroundTint="@color/material_on_background_disabled"
         android:onClick="onClickCopyText"
         android:src="?attr/actionModeCopyDrawable"
@@ -151,7 +151,6 @@
         android:id="@+id/copyKey"
         android:layout_width="45dp"
         android:layout_height="45dp"
-        android:background="?attr/actionModeCopyDrawable"
         android:backgroundTint="@color/material_on_background_disabled"
         android:onClick="onClickCopyKey"
         android:src="?attr/actionModeCopyDrawable"
@@ -166,8 +165,7 @@
         android:id="@+id/pasteText"
         android:layout_width="45dp"
         android:layout_height="45dp"
-        android:background="?attr/actionModePasteDrawable"
-        android:backgroundTint="@color/material_on_background_emphasis_high_type"
+        android:backgroundTint="@color/material_on_background_disabled"
         android:onClick="onClickPasteText"
         android:src="?attr/actionModePasteDrawable"
         app:layout_constraintBottom_toBottomOf="parent"
